# bsp-tree

./: Cargo.toml  LICENSE  NOTICE  README.md
crates/bsp-tree/: Cargo.toml  README.md
crates/bsp-tree/src/: cuttable.rs  lib.rs  plane.rs  polygon.rs  rectangle.rs  triangle.rs
crates/bsp-tree/src/bsp/: mod.rs  node.rs  selector.rs  tree.rs  visitor.rs
crates/bsp-viz/: Cargo.toml
crates/bsp-viz/src/: lib.rs  main.rs  navigator.rs
