[package]
name = "bsp-tree"
version = "0.2.0"
edition.workspace = true
license.workspace = true
authors = ["Niels Groeneveld"]
description = "Binary Space Partitioning (BSP) tree useful for 3D rendering. Works with flat polygons (triangles, quads, etc.)."
repository = "https://github.com/nielsgroen/bsp-tree"
readme = "README.md"
keywords = ["bsp", "spatial", "3d", "graphics", "geometry"]
categories = ["algorithms", "data-structures", "graphics", "game-development"]

[dependencies]
nalgebra = "0.34.1"
